Modificar font sizes de textos

--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -83,7 +83,7 @@
         {{app-graphics-municipio-treemap-graphic municipalidad=model}}
       </div>
       <div class="wow slideInUp animated">
-        {{app-graphics-municipio-data-table municipalidad=model classNames='metrics-container'}}
+        {{app-graphics-municipio-data-table municipalidad=model}}
       </div>
     </div>
   </div>
