Implementar pantallabotones de ranking municipal

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -20,7 +20,9 @@
     </div>
     <div class="col-lg-4 col-md-4 col-xs-4">
       <div class="timg">
-        <img src="assets/img/t3.png" />
+        {{#link-to 'ranking'}}
+          <img src="assets/img/t3.png" />
+        {{/link-to}}
       </div>
     </div>
   </div>
