--- a/app/templates/ranking.hbs
+++ b/app/templates/ranking.hbs
@@ -6,25 +6,4 @@
   <h3>Ranking municipal</h3>
 </div>
 
-<div class="pbox wow fadeInUp animated">
-  <div class="col-lg-6 col-md-6 col-xs-6">
-    <div class="pimg wow fadeInUp animated">
-      <img src="assets/img/a1.png" />
-    </div>
-  </div>
-  <div class="col-lg-6 col-md-6 col-xs-6">
-    <div class="pimg1 wow  fadeInUp animated">
-      <img src="assets/img/a2.png" />
-    </div>
-  </div>
-  <div class="col-lg-6 col-md-6 col-xs-6">
-    <div class="pimg wow  fadeInUp animated">
-      <img src="assets/img/a3.png" />
-    </div>
-  </div>
-  <div class="col-lg-6 col-md-6 col-xs-6">
-    <div class="pimg1 wow  fadeInUp animated">
-      <img src="assets/img/a4.png" />
-    </div>
-  </div>
-</div>
+{{outlet}}
