Set link to return to main

--- a/app/templates/ranking.hbs
+++ b/app/templates/ranking.hbs
@@ -3,7 +3,7 @@
 </div>
 
 <div class="dtext wow fadeInUp animated" style="background:#FFF;">
-  <h3>Ranking municipal</h3>
+  {{#link-to 'ranking.index'}}<h3>Ranking municipal</h3>{{/link-to}}
 </div>
 
 {{outlet}}
