Implementación temporal de rankins pendientes

--- a/app/templates/ranking/censo-datos-abiertos.hbs
+++ b/app/templates/ranking/censo-datos-abiertos.hbs
@@ -1,4 +1,4 @@
-<h2 class="text-center margin-top-30">Criterio: Presupuesto</h2>
+<h2 class="text-center margin-top-30">Criterio: Censo de datos abiertos</h2>
 
 {{#light-table table
   tableClassNames='table table-condensed'
