--- a/app/templates/ranking/poblacion.hbs
+++ b/app/templates/ranking/poblacion.hbs
@@ -1,3 +1,5 @@
+<h2 class="text-center margin-top-30">Criterio: Población</h2>
+
 {{#light-table table
   tableClassNames='table table-condensed'
   classNames='margin-top-30'
