--- a/app/templates/ranking/partidos-politicos.hbs
+++ b/app/templates/ranking/partidos-politicos.hbs
@@ -1,4 +1,4 @@
-<h2 class="text-center margin-top-30">Criterio: Presupuesto</h2>
+<h2 class="text-center margin-top-30">Criterio: Relación partidos políticos</h2>
 
 {{#light-table table
   tableClassNames='table table-condensed'
