Corregir transición entre rutas

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -75,7 +75,7 @@
       <button
         type="button"
         class="btn btn-default"
-        {{action 'consultarMunicipalidad'}}
+        {{action 'consultarMunicipalidad' currentMunicipalidad}}
       >Consultar</button>
     </div>
   </div>
