--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -10,18 +10,18 @@
   <div class="three">
     <div class="col-lg-4 col-md-4 col-xs-4">
       <div class="timg">
-        <img src="assets/img/t1.png" />
+        <img src="/assets/img/t1.png" />
       </div>
     </div>
     <div class="col-lg-4 col-md-4 col-xs-4">
       <div class="timg">
-        <img src="assets/img/t2.png" />
+        <img src="/assets/img/t2.png" />
       </div>
     </div>
     <div class="col-lg-4 col-md-4 col-xs-4">
       <div class="timg">
         {{#link-to 'ranking'}}
-          <img src="assets/img/t3.png" />
+          <img src="/assets/img/t3.png" />
         {{/link-to}}
       </div>
     </div>
