--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -44,6 +44,7 @@
       onchange=(action 'selectMunicipio')
       searchField='nombre'
       placeholder='Buscar'
+      noMatchesMessage=''
         as |municipio|
     }}
       {{municipio.nombre}}
