WIP: implementar mapa

--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -100,3 +100,16 @@
     {{/each}}
   {{/leaflet-map}}
 </div>
+
+<div class="next-map">
+  <div class="top">
+    {{#each categoriasDisponibles as |categoria|}}
+      <div class="ele">
+        <img src="/assets/img/1.jpg">
+        <div class="down">
+          <h5 class="a">SERVICIOS<br> PUBLICOS GENERALES</h5>
+        </div>
+      </div>
+    {{/each}}
+  </div>
+</div>
