--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
-<div class="container">
+{{!-- <div class="container">
   <div class="row">
     <div class="col-lg-12">
       {{outlet}}
     </div>
   </div>
 </div>
+ --}}
+{{ember-islands}}
