--- a/app/templates/application-loading.hbs
+++ b/app/templates/application-loading.hbs
@@ -1,3 +1,3 @@
-<div style="width: 100%; text-align: center;">
-  <h3>Paciencia, estamos cargando la info</h3>
+<div style="width: 100%; text-align: center; height: 400px;">
+  <h3>Cargando</h3>
 </div>
