--- a/app/templates/mapa.hbs
+++ b/app/templates/mapa.hbs
@@ -31,7 +31,7 @@
     options=departamentosDisponibles
     onchange=(action 'selectDepartamento')
     searchField='nombre'
-    placeholder='Departamentos'
+    placeholder='Departamento'
     allowClear=true
       as |departamento|
   }}
@@ -47,7 +47,7 @@
     options=municipiosDisponibles
     onchange=(action 'selectMunicipio')
     searchField='nombre'
-    placeholder='Municipios'
+    placeholder='Municipio'
     allowClear=true
     noMatchesMessage=''
       as |municipio|
@@ -62,7 +62,7 @@
     selected=currentAnio
     options=aniosDisponibles
     onchange=(action 'selectAnio')
-    placeholder='Años'
+    placeholder='Año'
     allowClear=true
     noMatchesMessage=''
       as |anio|
