--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,11 +2,11 @@
   <img src="/assets/img/down.png" />
 </div>
 
-<div class="dtext wow fadeInUp animated">
+<div class="dtext">
   <h3>Presupuestos municipales</h3>
 </div>
 
-<div class="three2 wow fadeInUp animated">
+<div class="three2">
   <div class="three">
     <div class="col-lg-4 col-md-4 col-xs-4">
       <div class="timg">
@@ -28,7 +28,7 @@
   </div>
 </div>
 
-<div class="after wow fadeInUp animated">
+<div class="after">
   <div class="col-lg-12">
     <label style="margin-right: 10px;">Municipalidad</label>
     {{#power-select
