Remover wow stuff

--- a/app/templates/ranking.hbs
+++ b/app/templates/ranking.hbs
@@ -2,7 +2,7 @@
   <img src="/assets/img/garrow1.png" />
 </div>
 
-<div class="dtext wow fadeInUp animated" style="background:#FFF;">
+<div class="dtext" style="background:#FFF;">
   {{#link-to 'ranking.index'}}<h3>Ranking municipal</h3>{{/link-to}}
 </div>
 
