--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -1,8 +1,8 @@
-<div class="dtext wow fadeInUp animated">
+<div class="dtext">
   <h3>Presupuestos municipales</h3>
 </div>
 
-<div class="three2 wow fadeInUp animated">
+<div class="three2">
   <div class="three3">
     <div class="col-lg-4 col-md-4 col-xs-4">
       <div class="dp">
@@ -72,13 +72,13 @@
       {{app-graphics-municipio-main-metrics municipalidad=model}}
     </div>
     <div class="col-lg-12">
-      <div class="widget-lines-graphic-container wow slideInUp animated">
+      <div class="widget-lines-graphic-container">
         {{app-graphics-municipio-lines-graphic municipio=model}}
       </div>
-      <div class="widget-treemap-graphic-container wow slideInUp animated">
+      <div class="widget-treemap-graphic-container">
         {{app-graphics-municipio-treemap-graphic municipalidad=model}}
       </div>
-      <div class="wow slideInUp animated">
+      <div>
         {{app-graphics-municipio-data-table municipalidad=model}}
       </div>
     </div>
