--- a/app/templates/ranking/index.hbs
+++ b/app/templates/ranking/index.hbs
@@ -1,27 +1,27 @@
-<div class="pbox wow fadeInUp animated">
+<div class="pbox">
   <div class="col-lg-6 col-md-6 col-xs-6">
-    <div class="pimg wow fadeInUp animated">
+    <div class="pimg">
       {{#link-to 'ranking.presupuesto'}}
         <img src="assets/img/a1.png" />
       {{/link-to}}
     </div>
   </div>
   <div class="col-lg-6 col-md-6 col-xs-6">
-    <div class="pimg1 wow  fadeInUp animated">
+    <div class="pimg1">
       {{#link-to 'ranking.poblacion'}}
         <img src="assets/img/a2.png" />
       {{/link-to}}
     </div>
   </div>
   <div class="col-lg-6 col-md-6 col-xs-6">
-    <div class="pimg wow  fadeInUp animated">
+    <div class="pimg">
       {{#link-to 'ranking.partidos-politicos'}}
         <img src="assets/img/a3.png" />
       {{/link-to}}
     </div>
   </div>
   <div class="col-lg-6 col-md-6 col-xs-6">
-    <div class="pimg1 wow  fadeInUp animated">
+    <div class="pimg1">
       {{#link-to 'ranking.censo-datos-abiertos'}}
         <img src="assets/img/a4.png" />
       {{/link-to}}
