Crear link de retorno a índice desde pantalla de información municipal

--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -1,5 +1,5 @@
 <div class="dtext">
-  <h3>Presupuestos municipales</h3>
+  {{#link-to 'index'}}<h3>Información municipal</h3>{{/link-to}}
 </div>
 
 <div class="three2">
