Refactorizar generación de gráficas y treemap para permitir config colors

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -33,7 +33,7 @@
     <label style="margin-right: 10px;">Municipalidad</label>
     {{#power-select
       selected=currentMunicipalidad
-      options=model
+      options=model.municipalidades
       onchange=(action 'selectMunicipalidad')
       searchField='nombreMunicipio'
       placeholder='Buscar'
