--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,53 +1,61 @@
-<div class="darrow">
-  <img src="/assets/img/down.png" />
-</div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
 
-<div class="dtext">
-  <h3>Presupuestos municipales</h3>
-</div>
-
-<div class="three2">
-  <div class="three">
-    <div class="col-lg-4 col-md-4 col-xs-4">
-      <div class="timg">
-        <img src="/assets/img/t1.png" />
+      <div class="darrow">
+        <img src="/assets/img/down.png" />
       </div>
-    </div>
-    <div class="col-lg-4 col-md-4 col-xs-4">
-      <div class="timg">
-        <img src="/assets/img/t2.png" />
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-4 col-xs-4">
-      <div class="timg">
-        {{#link-to 'ranking'}}
-          <img src="/assets/img/t3.png" />
-        {{/link-to}}
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="after">
-  <div class="col-lg-12">
-    <label style="margin-right: 10px;">Municipalidad</label>
-    {{#power-select
-      selected=currentMunicipalidad
-      options=model.municipalidades
-      onchange=(action 'selectMunicipalidad')
-      searchField='nombreMunicipio'
-      placeholder='Buscar'
-        as |municipalidad|
-    }}
-      <strong>{{municipalidad.nombreMunicipio}}</strong> <small>{{municipalidad.departamento}}</small>
-    {{/power-select}}
+      <div class="dtext">
+        <h3>Presupuestos municipales</h3>
+      </div>
 
-    <div class="button">
-      <button
-        type="button"
-        class="btn btn-default"
-        {{action 'consultarMunicipalidad' currentMunicipalidad}}
-      >Consultar</button>
+      <div class="three2">
+        <div class="three">
+          <div class="col-lg-4 col-md-4 col-xs-4">
+            <div class="timg">
+              <img src="/assets/img/t1.png" />
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-xs-4">
+            <div class="timg">
+              <img src="/assets/img/t2.png" />
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-xs-4">
+            <div class="timg">
+              {{#link-to 'ranking'}}
+                <img src="/assets/img/t3.png" />
+              {{/link-to}}
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="after">
+        <div class="col-lg-12">
+          <label style="margin-right: 10px;">Municipalidad</label>
+          {{#power-select
+            selected=currentMunicipalidad
+            options=model.municipalidades
+            onchange=(action 'selectMunicipalidad')
+            searchField='nombreMunicipio'
+            placeholder='Buscar'
+              as |municipalidad|
+          }}
+            <strong>{{municipalidad.nombreMunicipio}}</strong> <small>{{municipalidad.departamento}}</small>
+          {{/power-select}}
+
+          <div class="button">
+            <button
+              type="button"
+              class="btn btn-default"
+              {{action 'consultarMunicipalidad' currentMunicipalidad}}
+            >Consultar</button>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
