--- a/app/templates/ranking.hbs
+++ b/app/templates/ranking.hbs
@@ -1,9 +1,17 @@
-<div class="garrow">
-  <img src="/assets/img/garrow1.png" />
-</div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
 
-<div class="dtext" style="background:#FFF;">
-  {{#link-to 'ranking.index'}}<h3>Ranking municipal</h3>{{/link-to}}
-</div>
+      <div class="garrow">
+        <img src="/assets/img/garrow1.png" />
+      </div>
 
-{{outlet}}
+      <div class="dtext" style="background:#FFF;">
+        {{#link-to 'ranking.index'}}<h3>Ranking municipal</h3>{{/link-to}}
+      </div>
+
+      {{outlet}}
+
+    </div>
+  </div>
+</div>
