--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -74,3 +74,17 @@
 .margin-top-30 {
     margin-top: 30px;
 }
+
+.top {
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.topbar {
+    padding: 5px 0px;
+}
+
+.topbar h3 {
+    font-size: 25px;
+}
