--- a/app/templates/mapa.hbs
+++ b/app/templates/mapa.hbs
@@ -4,8 +4,13 @@
     margin: 0;
   }
 
-  html, body, .leaflet-container {
+  html, body {
     height: 100vh;
+    width: 100vw;
+  }
+
+  .leaflet-container {
+    height: 65vh;
     width: 100vw;
   }
 
