--- a/app/templates/mapa.hbs
+++ b/app/templates/mapa.hbs
@@ -28,6 +28,12 @@
     -webkit-filter: grayscale(1);
   }
 
+  .ember-power-select-trigger {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   @media (min-width: 768px) {
     .ember-power-select-trigger {
       width: 51%;
