--- a/app/templates/mapa.hbs
+++ b/app/templates/mapa.hbs
@@ -45,7 +45,7 @@
   <h3>Proyectos de inversión pública</h3>
 </div>
 
-<div class="col-lg-4 col-md-4 col-xs-4 left">
+<div class="col-lg-4 col-md-4 col-xs-4 left filter-box">
   <label class="hidden-xs" style="font-weight: normal; margin-right: 10px;">Departamento</label>
 
   {{#power-select
@@ -61,7 +61,7 @@
   {{/power-select}}
 </div>
 
-<div class="col-lg-5 col-md-5 col-xs-5 middle">
+<div class="col-lg-5 col-md-5 col-xs-5 middle filter-box">
   <label class="hidden-xs" style="font-weight: normal; margin-right: 10px;">Municipio</label>
 
   {{#power-select
@@ -78,7 +78,7 @@
   {{/power-select}}
 </div>
 
-<div class="col-lg-3 col-md-3 col-xs-3 right">
+<div class="col-lg-3 col-md-3 col-xs-3 right filter-box">
   <label class="hidden-xs" style="font-weight: normal; margin-right: 10px;">Año</label>
   {{#power-select
     selected=currentAnio
