--- a/app/templates/mapa.hbs
+++ b/app/templates/mapa.hbs
@@ -24,9 +24,17 @@
     width: 90%;
   }
 
+  .leaflet-popup-content p {
+    margin: 10px 0px;
+  }
+
   @media (min-width: 768px) {
     .filter-box-content-container {
       width: 92%;
+    }
+
+    .leaflet-popup-content p {
+      margin: 18px 0px;
     }
   }
 
