--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -12,16 +12,21 @@
 
       <div class="three2">
         <div class="three">
+
           <div class="col-lg-4 col-md-4 col-xs-4">
             <div class="timg">
               <img src="/assets/img/t1.png" />
             </div>
           </div>
+
           <div class="col-lg-4 col-md-4 col-xs-4">
             <div class="timg">
-              <img src="/assets/img/t2.png" />
+              {{#link-to 'compara'}}
+                <img src="/assets/img/t2.png" />
+              {{/link-to}}
             </div>
           </div>
+
           <div class="col-lg-4 col-md-4 col-xs-4">
             <div class="timg">
               {{#link-to 'ranking'}}
