--- a/app/templates/components/app-graphics-municipio-data-table.hbs
+++ b/app/templates/components/app-graphics-municipio-data-table.hbs
@@ -8,5 +8,5 @@
     iconDescending='fa fa-sort-desc'
     sortOnClick=true
   }}
-  {{t.body canSelect=false}}
+  {{t.body canSelect=false classNames='table-responsive'}}
 {{/light-table}}
