--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -96,7 +96,7 @@
               </div>
 
               {{!-- Tabla de distribución de presupuesto --}}
-              <div>
+              <div class="app-graphics-municipio-data-table">
                 {{app-graphics-municipio-data-table municipalidad=model}}
               </div>
             {{else}}
