--- a/app/templates/ranking.hbs
+++ b/app/templates/ranking.hbs
@@ -10,7 +10,9 @@
         {{#link-to 'ranking.index'}}<h3>Ranking municipal</h3>{{/link-to}}
       </div>
 
-      {{outlet}}
+      <div class="ranking-data-table">
+        {{outlet}}
+      </div>
 
     </div>
   </div>
