Crear link y template para analiza

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -9,7 +9,9 @@
 
       <div class="col-lg-4 col-md-4 col-xs-4">
         <div class="timg">
-          <img src="/assets/img/t1.png" />
+          {{#link-to 'analiza'}}
+            <img src="/assets/img/t1.png" />
+          {{/link-to}}
         </div>
       </div>
 
